--- a/localisation/KR_American_Union_State_l_english.yml
+++ b/localisation/KR_American_Union_State_l_english.yml
@@ -18,7 +18,7 @@ TEX_superior_fire_power:0 "Collins's combined arms plan"
 TEX_superior_fire_power_desc:0 "Joseph Lawton Collins better known as Lighting Joe has proposed that the key to victory in battle is to rely on combined arms and superior firepower. His plan holds merit, let us give him the support to achieve victory."
 TEX_praise_the_lord:0 "Praise the Lord"
 TEX_praise_the_lord_desc:0 "To make sure that the combined arms plans works we need to make sure that we have the best weapons available. Our soldiers need the best that we can provide."
-TEX_pass_the_ammunition:0 "and Pass the Ammunition"
+TEX_pass_the_ammunition:0 "And Pass the Ammunition"
 TEX_pass_the_ammunition_desc:0 "Just as we need the best rifles and infantry equipment we also need the best artillery. Let us work on producing just that. In the mean time never forget to Praise the Lord for his victory over America's Enemies!"
 TEX_conscription_law:0 "Conscription Law change"
 TEX_conscription_law_desc:0 "The strong military tradition of the south was not to be understated but the lack of manpower was an issue for the AUS. By reducing the age of conscription to 15 the American Union State was able to gain more manpower."
