--- a/localisation/KR_Princely_Federation_l_english.yml
+++ b/localisation/KR_Princely_Federation_l_english.yml
@@ -209,7 +209,7 @@ PRF_deal_with_devil_desc:0 "The Commune is strong enough on its own. Fighting a 
 PRF_incite_orissa:0 "Incite Orissa to Rebellion"
 PRF_incite_orissa_desc:0 "There is a possibility that we could entice the Zamindar squatters of Orissa to join our war against the Commune. It would split the strength of our enemy, though there is a risk our plans could be exposed and our war efforts severely compromised before the war even begins."
 PRF_attack_bhartiya:0 "Invade the Commune!"
-PRF_attack_bhartiya_desc:0 "The Syndicalsts to the East have too long been a threat. We must strike preemptively, with the element of surprise!"
+PRF_attack_bhartiya_desc:0 "The Syndicalists to the East have too long been a threat. We must strike preemptively, with the element of surprise!"
 
 PRF_india_united:0 "India United!"
 PRF_india_united_desc:0 "Jai Hind! The subcontinent is once again ours! Now what?"
@@ -348,7 +348,7 @@ prf.122.t:0 "The Malabar Coast Revolt"
 prf.122.d:0 "Governed by a progressive, headstrong and young ruler, the 19-gun-salute princely state of Travancore-Cochin never felt entirely at home under the leadership of the centralist Nizam of Hyderabad. Now, with the Maharaja of Mysore in open revolt against our government, the Malayam youngster has decided to throw the weight of the Combined princedom against our beleaguered forces! Troops loyal to the southernmost princely state have already defected, not caring to express any kind of loyalty towards the Nizam!"
 prf.122.a:0 "Now, our nation is truly divided"
 prf.124.t:0 "Waging the Cause of Tamil Irredentism"
-prf.124.d:0 "Ever since the federated gun-salute princes marched into the domains of the de-jure independent Madras Presidency in 1933 and wrested the southern tip of the continent alongside the Telegu and Kannada-speaking territories from the Tamils, revanchist fervor has been on the rise throughout the south-easternmost part of the subcontinent. Now, however, Osman Ali Khan’s Hyderabad government is facing extraordinary threats. With Mysore and Travancore-Cochin in open revolt against the hegemonic ambitions of the Deccan Plateau this might just be the time for the Madras Republic to regain its lost territories and teach the intrusive princes a lesson at the same time!"
+prf.124.d:0 "Ever since the federated gun-salute princes marched into the domains of the de-jure independent Madras Presidency in 1933 and wrested the southern tip of the continent alongside the Telegu and Kannada-speaking territories from the Tamils, revanchist fervour has been on the rise throughout the south-easternmost part of the subcontinent. Now, however, Osman Ali Khan’s Hyderabad government is facing extraordinary threats. With Mysore and Travancore-Cochin in open revolt against the hegemonic ambitions of the Deccan Plateau this might just be the time for the Madras Republic to regain its lost territories and teach the intrusive princes a lesson at the same time!"
 prf.125.t:0 "The [From.GetAdjective] Army Marches North"
 prf.125.d:0 "Damnation! The Tamils in the rump state of the former Madras Presidency have cast away all pretext of subversion to the Hyderabad regime and launched themselves against our brave troops. Already, the startled occupation forces in Madurai Coimbatore have been overrun!"
 prf.125.a:0 "To war!"
