--- a/localisation/KR_Romania_l_english.yml
+++ b/localisation/KR_Romania_l_english.yml
@@ -42,7 +42,8 @@ ROM_the_nai_desc:0 "A combination of the SET and IAR factories, the National Aer
 ### Focus Tree ###
 ROM_remilitarize_oltenia:0 "Re-militarise Oltenia"
 ROM_remilitarize_oltenia_desc:0 "Article XII of the Treaty of Bucharest forbids Romania to construct or maintain any fortifications or armed forces in Oltenia. It is time to bring an end to this situation."
-### Army expansion
+
+### Army Expansion ###
 ROM_army_expansion:0 "Expand the Army"
 ROM_army_expansion_desc:0 "Since the Iron Guard took power, we already violated the Treaty of Bucharest by introducing army conscription, where the treaty limited Romania to an army of 45,000 men. We need to further expand the army, to ensure a victory in future conflicts."
 ROM_infantry_weapons:0 "New Infantry Weapons"
@@ -61,7 +62,8 @@ ROM_mechanization_effort:0 "Mechanisation Effort"
 ROM_mechanization_effort_desc:0 "The army of the future does not solely consist of foot soldiers. We already have some motorised parts in our army, but a new type of mechanised vehicles will provide even more protection to our soldiers, while enabling them to move through rough terrain with ease."
 ROM_everything_for_the_country:0 "Everything for the Country"
 ROM_everything_for_the_country_desc:0 "The Romanian phrase Totul pentru Ţară, literally \"Everything for the Country\", is the official name of the Iron Guard. It's the duty of every Romanian to sacrifice himself for his country, and we need to remind the people of that."
-### Diplomatic
+
+### Diplomatic ###
 ROM_claim_transylvania:0 "Claim Transylvania"
 ROM_claim_transylvania_desc:0 "There lives a large Romanian minority in Transylvania, in some parts even a majority. We can press our claims on these parts and even extend our claim to include all of Transylvania and Banat."
 ROM_nationalize_oil_fields:0 "Nationalise the Oil Industry"
@@ -80,7 +82,8 @@ ROM_greater_romania_desc:0 "Now that all Romanians are finally united in one sta
 ROM_greater_romania_tooltip:0 "§GGains cores on all previously claimed territories that are now conquered.§!\n\n"
 ROM_extra_research_slot_ii:0 "Recruit New Scientists"
 ROM_extra_research_slot_ii_desc:0 "Our new territories have some large cities and house very smart people. We need to recruit among the population, especially among Romanians, to fuel our advances in R&D."
-### Party
+
+### Party ###
 ROM_cuib:0 "Establish Cuib"
 ROM_cuib_desc:0 "The Iron Guard is organised in chapters called cuib, or \"nest\", which are organised around the virtues of discipline, work, silence, education, mutual aid, and honour. We can expand these chapters so every working men knows his duty to his country."
 ROM_entrench_party:0 "Entrench Party"
@@ -94,9 +97,10 @@ ROM_crush_royalists_desc:0 "It is time to crush the Monarchists once and forever
 ROM_crush_royalists_tooltip:0 "Has won the civil war or averted it"
 ROM_rebuild_country:0 "Rebuild the Country"
 ROM_rebuild_country_desc:0 "The struggle for power with the supporters of the monarchy and other enemies of the republic has left us vulnerable. We need to rebuild our country and form a strong, cohesive society. For Romania!"
-# Industrial
+
+### Industrial ###
 ROM_ploiesti_refineries:0 "Expand the Ploiesti refineries"
-ROM_ploiesti_refineries_desc:0 "The oild fields of Ploiesti are one of the richest of Europe. While being leased to Germany under the obligations of the Treaty of Bucharest, we can further invest in the Ploiesti refineries with help of German and Austrian companies."
+ROM_ploiesti_refineries_desc:0 "The oil fields of Ploiesti are one of the richest of Europe. While being leased to Germany under the obligations of the Treaty of Bucharest, we can further invest in the Ploiesti refineries with help of German and Austrian companies."
 ROM_refinery_bonus:0 "Investment in Ploiesti refineries"
 ROM_infrastructure_effort:0 "Infrastructure Effort"
 ROM_infrastructure_effort_desc:0 "Our country is backwards compared to greater powers. We need to expand our infrastructure."
@@ -110,17 +114,18 @@ ROM_dig_for_oil:0 "Dig for Oil"
 ROM_dig_for_oil_desc:0 "The Ploiesti oil fields, already one of the richest in Europe, may hold more oil than we thought before."
 ROM_extra_research_slot:0 "Extra Research Slot"
 ROM_extra_research_slot_desc:0 "Investments in industrial progress lead to advancements in the field of R&D."
-# Air
+
+### Air ###
 ROM_technical_development_society:0 "The Technical Development Society"
-ROM_technical_development_society_desc:0 "The Societatea Pentru Exploatări Technice, or Technical Development Society, is an aircraft plant in Bucharest specialized in developing new training aircraft. We need to expand its facilities to give them the capacity to help our air force grow."
+ROM_technical_development_society_desc:0 "The Societatea Pentru Exploatări Technice, or Technical Development Society, is an aircraft plant in Bucharest specialised in developing new training aircraft. We need to expand its facilities to give them the capacity to help our air force grow."
 ROM_invest_in_iar:0 "Invest in IAR"
 ROM_invest_in_iar_desc:0 "Industria Aeronautică Română is the largest Romanian aircraft manufacturer, responsible for most of our fighter development and production. To ensure their continuing contribution to our war effort, they need our investment."
 ROM_fighter_designs:0 "New Fighter Designs"
 ROM_fighter_designs_desc:0 "Under leadership of IAR, we can develop new fighter designs that can match those of our neighbours."
 ROM_cas_effort:0 "CAS Effort"
-ROM_cas_effort_desc:0 "The air force of the furture relies on Close Air Support, and we need to make sure we have the best models available."
+ROM_cas_effort_desc:0 "The air force of the future relies on Close Air Support, and we need to make sure we have the best models available."
 ROM_medium_bomber_effort:0 "Bomber Effort"
-ROM_medium_bomber_effort_desc:0 "The air force of the furture relies on Tactical Bombers, and we need to make sure we have the best models available."
+ROM_medium_bomber_effort_desc:0 "The air force of the future relies on Tactical Bombers, and we need to make sure we have the best models available."
 ROM_air_tactics:0 "New Air Tactics"
 ROM_air_tactics_desc:0 "With our expanded air force, we can develop new tactics to be used in air combat."
 ROM_keep_individual_air_factories:0 "Keep the Airplane Factories Separated"
@@ -133,7 +138,8 @@ ROM_radar_effort:0 "Radar Effort"
 ROM_radar_effort_desc:0 "It is important to detect enemy planes. We need to develop RADAR capabilities to ensure early warning of enemy attacks."
 ROM_naval_bomber_effort:0 "Naval Bomber Effort"
 ROM_naval_bomber_effort_desc:0 "We need to develop more modern naval bombers to harass enemy shipping."
-# Naval
+
+### Naval ###
 ROM_expand_constanta_port:0 "Expand the Constanta port"
 ROM_expand_constanta_port_desc:0 "Constanta is an important port on the Black Sea, we need to expand it to allow for a larger navy."
 ROM_coastal_navy:0 "Coastal Navy"
@@ -202,7 +208,7 @@ RRM_paternal_autocrat_party_long:0 "Liga Apărării National Crestine"
 RRM_national_populist_party:0 "Garda de Fier"
 RRM_national_populist_party_long:0 "Garda de Fier"
 
-# Additional party names
+### Additional Party Names ###
 ROM_totul_pentru_tara:0 "TPT"
 ROM_totul_pentru_tara_long:0 "Totul Pentru Ţară"
 
@@ -230,7 +236,7 @@ ROM_EQUIPMENT_VERSION_16:0 "P"
 ROM_CAS_equipment_2:0 "IAR 81"
 ROM_CAS_equipment_2_short:0 "IAR 81"
 
-### Event text ###
+### Events ###
 romania.0.t:0 "[From.GetName]"
 romania.0.d:0 "Following the independence from the Ottoman Empire under King Carol in 1878 Romania began its slow process of modernisation and of turning to the west. In 1913 it entered the Second Balkan War, tipping the balance against Bulgaria and subsequently annexing southern Dobrogea from them.\n\nWith the outbreak of the Weltkrieg in 1914 Romania initially remained neutral but would join the Entente in 1916, led by Carol's successor Ferdinand. After a failed attempt to invade Transylvania, nearly 2/3 of the country was occupied by the Central Powers. Even though the army fought an effective defensive war from its last remaining holdout in Moldova, the government was forced, following the Russian collapse, to sign the Treaty of Bucharest in 1918. The southern part of Dobrogea was returned to Bulgaria, Oltenia was de-militarised, the oilfields were leased to Germany until 2012 and various other sectors of the economy became dominated by German and Austrian companies, with Romania getting the province of Bessarabia from the fallen Russian Empire in return.\n\nAfter the death of Ferdinand in 1927, the military managed to effectively seize the reigns of government, installing the 6 year old Michael, Ferdinand's grandson, as their puppet king, completely bypassing Carol II, the late king's disgraced son. Of the various groups which collaborated with the military, the right-wing Iron Guard, led by Corneliu Zelea Codreanu, proved the most dangerous. They managed to acquire more and more power within the state apparatus, eventually violently ousting the part of the military government still opposing them in 1935 and setting Codreanu up as the new Conducător, while the young king fled the country.\n\nCodreanu now rules over a divided nation, promising to restore Romania to its former greatness, throw off the shackles of its oppression and be rid of its enemies both foreign and domestic."
 romania.0.a:0 "A new future for Romania!"
@@ -253,7 +259,7 @@ romania.4.t:0 "Union Day"
 romania.4.d:0 "Union Day represents the Union of the Principalities of Moldova and Wallachia on the 24th of January, 1859, when Alexandru Ioan Cuza was elected as 'Domnitor' in both principalities as a way to bypass the ruling that the two cannot unite in a single state. It is regarded as a National Holiday in Romania."
 romania.4.a:0 "Everything for the Fatherland!"
 
-romania.5.t:0 "Union Day" # same as romania.4
+romania.5.t:0 "Union Day" #same as romania.4
 
 romania.7.t:0 "A conspiracy!"
 romania.7.d:0 "The members of the Bucharest Circle have spread the seeds of an anti-Iron Guard revolution. The people in the north of the country have taken arms against our government!"
