--- a/localisation/KR_Russia_Foreign_l_english.yml
+++ b/localisation/KR_Russia_Foreign_l_english.yml
@@ -81,7 +81,7 @@ RUS_crush_mitteleuropa_tooltip:0 "Gains cores on §YEastern and Southern Ukraine
 RUS_act_solo_syndie_ukraine:0 "Resolve the Syndicalist Ukraine Problem"
 RUS_act_solo_syndie_ukraine_desc:0 "Powerful German armies had been protecting Ukraine from annexation since the October revolution. Now the Ukrainians have decided to break diplomatic relations with Germany in favour of the French. Maybe it's our chance to reunite Ukraine with Russia."
 RUS_ask_germany_syndie_ukraine:0 "Propose the Bjorko Pact to Germany"
-RUS_ask_germany_syndie_ukraine_desc:0 "Ukraine, a former territory of Russia has fallen to the Syndicalsts. They are a threat to the stability of the region, and it would be in our best interests to reincorporate them, but maybe we should gain German permission first before entering in any military campaigns in the territory of their former ally?"
+RUS_ask_germany_syndie_ukraine_desc:0 "Ukraine, a former territory of Russia has fallen to the Syndicalists. They are a threat to the stability of the region, and it would be in our best interests to reincorporate them, but maybe we should gain German permission first before entering in any military campaigns in the territory of their former ally?"
 RUS_ultimatum_galicia:0 "Ultimatum for Galicia"
 RUS_ultimatum_galicia_desc:0 "-"
 RUS_crush_poland:0 "We must subjugate Central Poland"
@@ -97,7 +97,7 @@ RUS_befriend_finland_desc:0 "With Russia being so reasonable it's not impossible
 
 can_only_take_one_alliance:0 "§GYou can only take one of the focus to choose an alliance, choose wisely!§!"
 RUS_join_entente:0 "Join the Entente"
-RUS_join_entente_desc:0 "During the Weltkrieg we stood beside Great Britain and France against the Germanic huns and their allies. We have not forgotten the cause!"
+RUS_join_entente_desc:0 "During the Weltkrieg we stood beside Great Britain and France against the Germanic Huns and their allies. We have not forgotten the cause!"
 RUS_join_mitteleuropa:0 "Join Mitteleuropa"
 RUS_join_mitteleuropa_desc:0 "While the despicable Germans are the cause for our current situation, the main threat of the world cannot simply be ignored. The rise of Syndicalism changed everything."
 RUS_join_internationale:0 "Join the Internationale"
@@ -1182,7 +1182,7 @@ rusfor.1081.d:0 "The Russians have sent us a considerable amount of money and mi
 rusfor.1081.a:0 "Excellent!"
 
 rusfor.1082.t:0 "The Transamur Takeover"
-rusfor.1082.d:0 "With the reassurgent Russian state gaining full control over the once disputed Trans-Siberian railroad from Mongolia, commercial contacts have increased massively with the Transamur Republic, and Japan economic presence in Transamur has started to fade in comparison with the inflow of massive Russian investments. The Economy of Transamur, a rebellious state created via Japanese incursion during Russian civil war started to experience serious economical difficulties thanks to relatively unrestricted influx of cheaper goods, coming through recently liberated Trans-Siberian railroad. The weakened state can now be easily taken with a detachment of a few soldiers."
+rusfor.1082.d:0 "With the resurgent Russian state gaining full control over the once disputed Trans-Siberian railroad from Mongolia, commercial contacts have increased massively with the Transamur Republic, and Japan economic presence in Transamur has started to fade in comparison with the inflow of massive Russian investments. The Economy of Transamur, a rebellious state created via Japanese incursion during Russian civil war started to experience serious economical difficulties thanks to relatively unrestricted influx of cheaper goods, coming through recently liberated Trans-Siberian railroad. The weakened state can now be easily taken with a detachment of a few soldiers."
 rusfor.1082.a:0 "Claim Transamur! All Russians must be under Russian rule!"
 rusfor.1082.b:0 "Send a detachment of troops to Vladivostok to dissolve Transamur!"
 
@@ -1228,7 +1228,7 @@ rusfor.1089.b:0 "Allow it, but rig the results."
 rusfor.1089.c:0 "No way!"
 
 rusfor.1090.t:0 "Transamur allows the plebiscite!"
-rusfor.1090.d:0 "The government of Transamur has seen reason. They have agreed to give the people of the Tranamur Republic a free and fair election to determine whether they want to rejoin Russia."
+rusfor.1090.d:0 "The government of Transamur has seen reason. They have agreed to give the people of the Transamur Republic a free and fair election to determine whether they want to rejoin Russia."
 rusfor.1090.a:0 "We shall await the results."
 
 rusfor.1091.t:0 "The Transamur Plebiscite"
@@ -1243,7 +1243,7 @@ rusfor.1092.b:0 "We shall keep an eye on Transamur."
 rusfor.1092.c:0 "We shall send in the army!"
 
 rusfor.1093.t:0 "Transamur allows the plebiscite!"
-rusfor.1093.d:0 "The government of Transamur has seen reason. They have agreed to give the people of the Tranamur Republic an election to determine whether they want to rejoin Russia. However, we have been informed that there are certain irregularities in the procedure."
+rusfor.1093.d:0 "The government of Transamur has seen reason. They have agreed to give the people of the Transamur Republic an election to determine whether they want to rejoin Russia. However, we have been informed that there are certain irregularities in the procedure."
 rusfor.1093.a:0 "Never mind, we shall await the results."
 rusfor.1093.b:0 "How dare they? Send troops to observe the election!"
 
@@ -1253,7 +1253,7 @@ rusfor.1094.a:0 "We shall join with Russia."
 rusfor.1094.b:0 "Remain independent."
 
 rusfor.1095.t:0 "Transamur refuses plebiscite!"
-rusfor.1095.d:0 "The government of Transamur has put their foot down. They have arrested the organisers of the plebiscite, publicly stating that Tranamur is an independent state with a long historical tradition of independence from Russia, they say they will never rejoin our country."
+rusfor.1095.d:0 "The government of Transamur has put their foot down. They have arrested the organisers of the plebiscite, publicly stating that Transamur is an independent state with a long historical tradition of independence from Russia, they say they will never rejoin our country."
 rusfor.1095.a:0 "We shall respect their wishes."
 rusfor.1095.b:0 "We shall keep an eye on Transamur."
 rusfor.1095.c:0 "We shall send in the army!"
@@ -1623,7 +1623,7 @@ rusfor.1170.b:0 "Claim the Ukraine!"
 rusfor.1170.c:0 "We don't need them."
 
 rusfor.1171.t:0 "The Bjorko Pact"
-rusfor.1171.d:0 "Ukraine, a former territory of the Russian Empire has fallen to the Syndicalsts. Led by that boar Khruschev, they have already begun to redistribute the land. They are a threat to the stability of the region, and it would be in our best interests to reincorporate them...but...it may be safer to first gain German permission before entering in any military campaigns in the territory of their former ally. The foreign minister has come up with a treaty that we can propose to the Kaiser. In exchange for giving us a free-hand in Ukraine, we will enter in a mutual defence agreement."
+rusfor.1171.d:0 "Ukraine, a former territory of the Russian Empire has fallen to the Syndicalists. Led by that boar Khruschev, they have already begun to redistribute the land. They are a threat to the stability of the region, and it would be in our best interests to reincorporate them...but...it may be safer to first gain German permission before entering in any military campaigns in the territory of their former ally. The foreign minister has come up with a treaty that we can propose to the Kaiser. In exchange for giving us a free-hand in Ukraine, we will enter in a mutual defence agreement."
 rusfor.1171.a:0 "Send our foreign minister to Berlin to negotiate a pact!"
 
 rusfor.1172.t:0 "The Bjorko Pact"
@@ -1691,7 +1691,7 @@ rusfor.1184.a:0 "Accept their terms"
 rusfor.1184.b:0 "Fight for Bessarabia!"
 
 rusfor.1185.t:0 "Russian demands"
-rusfor.1185.d:0 "Yesterday Russian government demanded the return of Bessarabia region. If we agree with Russian claims, we will lost 1/3 of our territory, but if we refuse, we shall face an immediate Russian invasion. How should we react on these awfull claims of Russian leadership?"
+rusfor.1185.d:0 "Yesterday Russian government demanded the return of Bessarabia region. If we agree with Russian claims, we will lost 1/3 of our territory, but if we refuse, we shall face an immediate Russian invasion. How should we react on these awful claims of Russian leadership?"
 rusfor.1185.a:0 "Accept their terms"
 rusfor.1185.b:0 "Never!"
 rusfor.1185.c:0 "Counteroffer - Bessarabia for alliance"
@@ -2010,7 +2010,7 @@ rusfor.1250.b:0 "Search for allies in Europe!"
 rusfor.1250.c:0 "Create a completely new global alliance!"
 
 rusfor.1251.t:0 "Alliance with Russia?"
-rusfor.1251.d:0 "The Russians want to form an alliance with us. Even if some members of general staff and government are aginst it, if they can not deny that such an alliance would shake the world to its core. How shall we respond?"
+rusfor.1251.d:0 "The Russians want to form an alliance with us. Even if some members of general staff and government are against it, if they can not deny that such an alliance would shake the world to its core. How shall we respond?"
 rusfor.1251.a:0 "Yes!"
 rusfor.1251.b:0 "No!"
 
