--- a/localisation/KR_South_Africa_l_english.yml
+++ b/localisation/KR_South_Africa_l_english.yml
@@ -195,7 +195,6 @@ SAF_implement_apartheird_desc:0 "After a period of consolidation, we are now in 
 SAF_implement_federation:0 "Implement the Federation"
 SAF_implement_federation_desc:0 "While we have been calling ourselves the South African Federation for a while, we have not yet implemented all the reforms we needed to make that change official. With the country stabilised and our opposition beaten, we can now move and rewrite the Constitution. The Union is no more, but South Africa lives on."
 
-
 ### Ideas ###
 
 racial_segregation:0 "Racial Segregation"
@@ -403,7 +402,7 @@ SACW.14.a:0 "No, we will preserve the Union!"
 SACW.14.b:0 "Restore the Zuid-Afrikaansche Republiek!"
 
 SACW.15.t:0 "Preperations for the Centenary Celebrations"
-SACW.15.d:0 "The Centenial Anniversary of the Great Trek is little under a month away. The centenary celebrations are planned to commence with a re-enactment of the trek, beginning on 8 August 1938 with nine ox wagons departing from the the statue of Jan van Riebeeck in Cape Town and ending at the newly completed Voortrekker Monument in Pretoria, at which point the monument shall be inaugurated by the President.\n\nThe whole affair is meant to be a celebration of Afrikaner culture and heritage, but the situation in the country has since changed, and such a lavish event could very well be met with open hostility by the other racial groups and even the pro-British population who are likely to see it as a display of Afrikaner triumphalism. Shall we continue as planned or rein in the scale of the event?"
+SACW.15.d:0 "The Centennial Anniversary of the Great Trek is little under a month away. The centenary celebrations are planned to commence with a re-enactment of the trek, beginning on 8 August 1938 with nine ox wagons departing from the the statue of Jan van Riebeeck in Cape Town and ending at the newly completed Voortrekker Monument in Pretoria, at which point the monument shall be inaugurated by the President.\n\nThe whole affair is meant to be a celebration of Afrikaner culture and heritage, but the situation in the country has since changed, and such a lavish event could very well be met with open hostility by the other racial groups and even the pro-British population who are likely to see it as a display of Afrikaner triumphalism. Shall we continue as planned or rein in the scale of the event?"
 SACW.15.a:0 "It will go ahead as planned!"
 SACW.15.b:0 "They'll have to make do with less."
 
