--- a/localisation/KR_Spain_l_english.yml
+++ b/localisation/KR_Spain_l_english.yml
@@ -179,7 +179,7 @@ SPR_new_equipment_desc:0 "We must focus on modernising our army's equipment, muc
 SPR_motor_focus:0 "Spanish Motorworks"
 SPR_motor_focus_desc:0 "We must get our soldiers off their feet, and focus on giving them the kind of mobility which will give us an advantage."
 SPR_artillery_focus:0 "Artillery Focus"
-SPR_artillery_focus_desc:0 "Firepower - this is what we most desperately need. The ability to knock down an enemy's fortifications, and to bombard them into senselessness should they dare cross the Pyrennes."
+SPR_artillery_focus_desc:0 "Firepower - this is what we most desperately need. The ability to knock down an enemy's fortifications, and to bombard them into senselessness should they dare cross the Pyrenees."
 SPR_tank_focus:0 "The Spanish Panzer Corps"
 SPR_tank_focus_desc:0 "Heavy armour - it provides both speed and firepower, and it is our clear path to victory in the wars to come."
 SPR_army_innovation:0 "Army Innovation"
@@ -197,8 +197,8 @@ SPR_air_focus_desc:0 "It is a basic fact that we cannot be both a naval power an
 SPR_naval_academy:0 "Academia Naval Española"
 SPR_naval_academy_desc:0 "There are several naval academies in operation throughout Spain, but all of them adhere to long-outdated methods. We must bring them together, and provide them the resources to ensure new doctrines can be embraced which will give us the kind of naval experience we so desperately need."
 SPR_shipyards:0 "The Barcelona Shipyards"
-SPR_shipyards_desc:0 "Upgrading the aging shipbuilding facilities in Barcelona is our most promising path to building a truly powerful Spanish fleet."
-SPR_expand_navy:0 "Exand the Navy"
+SPR_shipyards_desc:0 "Upgrading the ageing shipbuilding facilities in Barcelona is our most promising path to building a truly powerful Spanish fleet."
+SPR_expand_navy:0 "Expand the Navy"
 SPR_expand_navy_desc:0 "We must focus on researching new types of ships, to keep our navy from lagging behind nations who have been at it for far longer. If we cannot have strength of numbers, we will have quality."
 SPR_navy_focus:0 "Rule the Seas"
 SPR_navy_focus_desc:0 "It is a basic fact that we cannot be both a naval power and an airforce power - so we have chosen to rule the seas, and to gear our industry towards producing the kind of naval power which will make superiority over the seas something we can achieve."
@@ -212,7 +212,7 @@ SPR_join_entente_desc:0 "Our place lies with our traditional allies, the British
 SPR_isolation:0 "We Stand Alone"
 SPR_isolation_desc:0 "Truly, Spain has no interest in joining in the larger conflicts of the world. We have seen enough troubles. For now, we rebuild and look to our own defence."
 SPR_guard_border:0 "Guard the Borders"
-SPR_guard_border_desc:0 "The many paths over the Pyrennes are our only weakness. We must fortify the border, to ensure no-one pushes into Spanish territory while we can yet defend it."
+SPR_guard_border_desc:0 "The many paths over the Pyrenees are our only weakness. We must fortify the border, to ensure no-one pushes into Spanish territory while we can yet defend it."
 SPR_bourbon_throne:0 "Claim the Bourbon Throne"
 SPR_bourbon_throne_desc:0 "King Jaime I is, by rights, the senior legitimate male heir of the House of Capet and thus heir to the French throne. Indeed, there are many Frenchmen who consider him the de jure King of France. It is time to see that claim enforced and see all of France and Spain united under a single banner once again."
 
@@ -550,26 +550,26 @@ sprc.238.b:0 "They have gone too far - to war!"
 sprc.238.c:0 "We will not push this further"
 
 sprc.240.t:0 "The Anarchist Riots"
-sprc.240.d:0 "Inspired by the success of the FAI in the Spanish Revolution and its swelling membership, our local anarcho-syndicalist group, the União Anarquista Portuguesa, has been causing strikes and protests across the nation. Today, a major strike and protest took place on the streets of Lisbon, which soon turned violent. Rumors say the anarchists are plotting to coup the government!"
+sprc.240.d:0 "Inspired by the success of the FAI in the Spanish Revolution and its swelling membership, our local anarcho-syndicalist group, the União Anarquista Portuguesa, has been causing strikes and protests across the nation. Today, a major strike and protest took place on the streets of Lisbon, which soon turned violent. Rumours say the anarchists are plotting to coup the government!"
 sprc.240.a:0 "Declare the UAP illegal and wrest control of the streets"
-sprc.240.b:0 "The UAP succedes in their coup!"
+sprc.240.b:0 "The UAP succeeds in their coup!"
 
 sprc.241.t:0 "Anarchist Coup!"
-sprc.241.d:0 "The União Anarquista Portuguesa has succeded on their coup against the [Root.GetAdjective] government. A true regime of all workers has been established!"
+sprc.241.d:0 "The União Anarquista Portuguesa has succeeded on their coup against the [Root.GetAdjective] government. A true regime of all workers has been established!"
 sprc.241.a:0 "The UAP establishes a new Portuguese Republic"
 sprc.241.b:0 "Propose integration into [CNT.GetNameDef]"
 
 sprc.242.t:0 "Revolution in Portugal"
-sprc.242.d:0 "The Uniao Anarquista Portuguesa has succeded on their coup against the dictatorship in Portugal. With help from the CNT-FAI, a true government of all workers has been established!"
+sprc.242.d:0 "The Uniao Anarquista Portuguesa has succeeded on their coup against the dictatorship in Portugal. With help from the CNT-FAI, a true government of all workers has been established!"
 sprc.242.a:0 "We welcome our Portuguese brothers"
 
 sprc.243.t:0 "Revolution in Portugal"
-sprc.243.d:0 "The União Anarquista Portuguesa has succeded on their coup against the dictatorship in Portugal. With help from the CNT-FAI, a true government of all workers has been established! The UAP has now proposed a complete integration of Portugal into our Federation."
+sprc.243.d:0 "The União Anarquista Portuguesa has succeeded on their coup against the dictatorship in Portugal. With help from the CNT-FAI, a true government of all workers has been established! The UAP has now proposed a complete integration of Portugal into our Federation."
 sprc.243.a:0 "Accept their offer - Integrate the Portuguese nation"
 sprc.243.b:0 "Rather not - Maybe an alliance instead?"
 
 sprc.245.t:0 "Suppression of the UAP"
-sprc.245.d:0 "An emergency CNT-FAI meeting has been called to discuss the problem in Portugal. With the increased violent action from the UAP, the Portuguese government has decided to crack down on the organization. With the fear and anger of its members, the UAP is calling for action."
+sprc.245.d:0 "An emergency CNT-FAI meeting has been called to discuss the problem in Portugal. With the increased violent action from the UAP, the Portuguese government has decided to crack down on the organisation. With the fear and anger of its members, the UAP is calling for action."
 sprc.245.a:0 "Invade Portugal! Viva la Revolución!"
 sprc.245.b:0 "Let the UAP take care of this alone"
 
@@ -578,7 +578,7 @@ sprc.246.d:0 "As news of the annexation of Portugal has reached their former col
 sprc.246.a:0 "So it seems..."
 
 sprc.247.t:0 "Portugal is Weak"
-sprc.247.d:0 "[POR.GetNameDef] is under attack by [CNT.GetNameDef]. Their colonies here in Afrika are weak and underprotected - should we grab Angola now before it falls into [CNT.GetAdjective] hands?"
+sprc.247.d:0 "[POR.GetNameDef] is under attack by [CNT.GetNameDef]. Their colonies here in Afrika are weak and under-protected - should we grab Angola now before it falls into [CNT.GetAdjective] hands?"
 sprc.247.a:0 "We must get it!"
 sprc.247.b:0 "No, leave it alone"
 sprc.248.t:0 "[From.GetNameDef] Seizes Angola!"
@@ -586,7 +586,7 @@ sprc.248.d:0 "[From.GetNameDef] has taken advantage of the current chaos and sen
 sprc.248.a:0 "Curse them!"
 
 sprc.249.t:0 "Portugal is Weak"
-sprc.249.d:0 "[POR.GetNameDef] is under attack by [CNT.GetNameDef]. Their colonies here in Afrika are weak and underprotected - should we grab Mozambique now before it falls into [CNT.GetAdjective] hands?"
+sprc.249.d:0 "[POR.GetNameDef] is under attack by [CNT.GetNameDef]. Their colonies here in Afrika are weak and under-protected - should we grab Mozambique now before it falls into [CNT.GetAdjective] hands?"
 sprc.250.t:0 "[From.GetNameDef] Seizes Mozambique!"
 sprc.250.d:0 "[From.GetNameDef] has taken advantage of the current chaos and sent its troops into Mozambique!"
 
