--- a/localisation/KR_USA_l_english.yml
+++ b/localisation/KR_USA_l_english.yml
@@ -77,7 +77,7 @@ USA_national_rehabilitation:0 "National Rehabilitation"
 USA_national_rehabilitation_desc:0 "With the war over, MacArthur has decided to take a stock of the situation and figure out what his future course will be. Will he give up power or will he hold on it to it."
 USA_loyalty_to_mac_arthur:0 "Loyalty to MacArthur"
 USA_loyalty_to_mac_arthur_desc:0 "To ensure that America is safe from all harm, MacArthur needs loyal men and women by his side. Spies and saboteurs look around every corner. To keep America safe loyalty to MacArthur shall be stressed."
-USA_american_cincinnatus:0 "the American Cincinnatus"
+USA_american_cincinnatus:0 "The American Cincinnatus"
 USA_american_cincinnatus_desc:0 "MacArthur shall follow in the footsteps of the ancient Roman Cincinnatus. Granted great power and dictatorial control Cincinnatus gave it up back to the roman republic, so too shall MacArthur. He took the reins of power not to destroy democracy but safeguard it from her enemies. Now that is accomplished, democracy can flourish again."
 USA_military_junta:0 "Military Junta"
 USA_military_junta_desc:0 "America is still not ready yet for full democracy. It would just vote for the Syndicalists or the American First. No. The military shall take care of America and keep her people safe and happy."
@@ -1201,10 +1201,11 @@ ustates.175.a:0 "It's out of question - Viva La Democracy!"
 ustates.175.b:0 "Mac Arthur...sounds good for a dictator"
 
 ustates.176.t:0 "Forging new USA - internal policy"
-ustates.176.d:0 "President MacArthur who is even not President de iure has to make his mind up whatever he wants to throw away Constitution or to keep deprived of power the Senate and House of Representatives. First option would be really hard to accept for many Americans, including the most influential military officers and civilians. Creating the totalitarian state is tempting option but it can lead to great divisions in society. The second option leaves the democratic appearance and allow s MacArthur's junta to fully control the state. Counter-intelligence officials and secret police is warning us about rising discontent in many circles including the army, so perhaps it's the best to appear democratic!"
+ustates.176.d:0 "President MacArthur who is even not President de jure has to make his mind up whatever he wants to throw away Constitution or to keep deprived of power the Senate and House of Representatives. First option would be really hard to accept for many Americans, including the most influential military officers and civilians. Creating the totalitarian state is tempting option but it can lead to great divisions in society. The second option leaves the democratic appearance and allow s MacArthur's junta to fully control the state. Counter-intelligence officials and secret police is warning us about rising discontent in many circles including the army, so perhaps it's the best to appear democratic!"
 ustates.176.a:0 "MacArthur doesn't need to be President to exercise power!"
 ustates.176.b:0 "MacArthur will be President but he will leave day-to-day ruling to Senate and House"
 ustates.176.c:0 "One nation, one country, one ruler"
+
 ustates.177.t:0 "1940 presidential elections"
 ustates.177.d:0 "The Patriotic Party connected with Mac Arthur and his cabinet has a great chance of winning the Presidential elections. The voters are stunned with pro-government propaganda and police actions against the opposition are working. It seems that the government will win and MacArthur's puppet will be the new President."
 ustates.177.a:0 "Democrat"
@@ -1482,16 +1483,20 @@ ustates.227.t:0 "The Elections of 1948. Wallace vs. Thurmond"
 ustates.227.d:0 "President Wallace had tried hard to reform America in a country where all Americans could live side by side once again. However, many of his reforms had proven to be very unpopular, especially his attempts at ending segregation in the South. The Republicans tried to take advantage of the controversy by nominating Strom Thurmond as their candidate."
 ustates.227.a:0 "Henry Wallace/Harry Truman (Dem.)"
 ustates.227.b:0 "Strom Thurmond/John Bricker (Rep.)"
+
 ustates.228.t:0 "One of our ministers has died"
 ustates.228.d:0 "Our nation mourns as one of our ministers passed away. Even now, our nation and the minister's office have to move onward. A new minister has to be put in office."
 ustates.228.a:0 "Okay"
+
 ustates.238.t:0 "Henry Ford has died!"
 ustates.238.d:0 "The father of the Ford Motor Company, Henry Ford, has died! He was known throughout the world for 'Fordism', high wages for workers and cheap, mass produced goods. He will clearly be missed."
 ustates.238.a:0 "Memento Mori"
+
 ustates.281.t:0 "Office of Strategic Services"
 ustates.281.d:0 "During the turbulence of the 30ies the Army intelligence services were clearly ineffective. To better organise espionage the US government decided to create the Office of Strategic Services which will deal with intelligence and counter-espionage. A lot of people raise objections to such move as they see the OSS as an agency which will be outside any control and too powerful in our state."
 ustates.281.a:0 "The US Government shall have its host of spies!"
 ustates.281.b:0 "Public opinion forces the US government to discard the OSS"
+
 ustates.285.t:0 "Status of California"
 ustates.285.d:0 "As our main struggle against both the Combined Syndicates and the America First regime is over, we have slowly been restoring order to those former rebel strongholds in the Deep South and in the Great Lakes area. The California-based rival government of the Pacific States, however, still claims sovereignty over a large area of the Western US, going as far as commanding the former National Guard on those states and also several units of the USAAF. Even some capital ships of our navy have switched allegiance to the Sacramento clique! In order to restore the rule of law, as the saying goes, 'from sea to shining sea', our military leaders have devised a plan for an immediate police action against the rebel PSA to forcibly return those states to the Union. Resistance is expected to be high, however, since many civilians and most of the military are now giving value to their newly-gained independence as a bulwark against the chaos that engulfed the rest of the country. Even on our own home states, the common folk is more interested in returning to their towns and rebuilding their life's than on another round of this fratricidal civil war - if we go ahead with this invasion, we will surely see a new set of major protests on our cities. For this reason, a good part of our senate favours a more diplomatic approach to this situation, simply convincing the Pacific States to rejoin the Washington-based government."
 ustates.285.a:0 "Demand immediate reincorporation of PSA!"
@@ -1535,30 +1540,38 @@ ustates.292.a:0 "PSA is a rebel state like the CSA or the AUS"
 ustates.292.b:0 "We won't attack them but we won't recognise them"
 ustates.292.c:0 "Recognise independence of the PSA"
 ustates.292.e:0 "PSA could be our ally"
+
 ustates.293.t:0 "USA proposes an alliance!"
 ustates.293.d:0 "The leaders of the USA are eager to promote stability and peace in our region after the horrible Second Civil War. Despite calls to fight the rebels the USA is ready to form an alliance with us."
 ustates.293.a:0 "Yes, of course!"
 ustates.293.b:0 "Never!"
 ustates.293.c:0 "How about a non-aggression pact?"
+
 ustates.294.t:0 "California proposes a non-aggression pact"
 ustates.294.d:0 "It seems that the Californians are not ready to build a strong American alliance. They suggested a non-aggression pact instead."
 ustates.294.a:0 "Hpmh, we will take it"
 ustates.294.b:0 "No, it's not enough"
+
 ustates.322.t:0 "Independent Federated Union"
 ustates.322.d:0 "...Nobody sees this..."
 ustates.322.a:0 "A new beginning"
+
 ustates.323.t:0 "Independent New England"
 ustates.323.d:0 "...Nobody sees this..."
 ustates.323.a:0 "A new beginning"
+
 ustates.324.t:0 "Independent Pacific States"
 ustates.324.d:0 "...Nobody sees this..."
 ustates.324.a:0 "A new beginning"
+
 ustates.325.t:0 "Independent Great Lakes Confederation"
 ustates.325.d:0 "...Nobody sees this..."
 ustates.325.a:0 "A new beginning"
+
 ustates.400.t:0 "Black Monday hits America!"
 ustates.400.d:0 "Despite the political turmoil going on throughout the Country, it looked like the economy of the United States might be finally be recovering after the Wall Street Crash in 1925. However today devastating Berlin Crash has finally hit America and sent our economy into a downward spiral, yet again. Reed and Long have come out railing against the corrupt bankers who let the crash happen. Curtis and Garner have both pledged to fix the economy should the win the Election."
 ustates.400.a:0 "This is just not our Year."
+
 ustates.401.t:0 "The Trial of Sacco and Vanzetti"
 ustates.401.d:0 "Two immigrants from Italy, Sacco and Vanzetti, have been accused of killing a guard and paymaster of a local bank in Braintree Massachusetts, a town outside of Boston. The case has quickly became the trial of the century, for Sacco and Vanzetti are anarchists. Unsurprisingly the CSA has come out strongly in favour of the two men while the American First has come out against them. How ever the case goes it looks like it will anger plenty of people."
 ustates.401.a:0 "Sacco and Vanzetti are innocent"
