--- a/localisation/KR_Union_of_Britain_l_english.yml
+++ b/localisation/KR_Union_of_Britain_l_english.yml
@@ -197,9 +197,9 @@ uob.5.t:0 "Vote for foreign policy"
 uob.5.d:0 "The debate has wandered into the area of foreign policy. As has been predicted, every faction has put forward their own suggestions. The congress listened casually to every candidate until the suggestion of the Autonomists were heard, when a slow, shocked murmur ran through the hall."
 uob.5.a:0 "Max.: We must fight the reactionaries wherever we find them"
 uob.5.b:0 "Fed.: Canada is our mortal enemy, and France is our good friend"
-uob.5.c:0 "Aut.: We must take a reconciliatory position towards the Royalists"
+uob.5.c:0 "Aut.: We must take a position of reconciliation towards the Royalists"
 uob.6.t:0 "The Resignation of Philip Snowden"
-uob.6.d:0 "On the last day of the TUC congress Chairman Philip Snowden climbed up to the podium and made a speech. He claimed that in face of massive rifts within the TUC and due to his age he intends to resign his post. He also pulled out the cliche 'time with the family' bit that all politicans do. The congregation stood silent as he climbed down from the podium and made his way out of the hall. The country is shocked and in a few days' time the TUC will have to vote on a new chairman."
+uob.6.d:0 "On the last day of the TUC congress Chairman Philip Snowden climbed up to the podium and made a speech. He claimed that in face of massive rifts within the TUC and due to his age he intends to resign his post. He also pulled out the cliche 'time with the family' bit that all politicians do. The congregation stood silent as he climbed down from the podium and made his way out of the hall. The country is shocked and in a few days' time the TUC will have to vote on a new chairman."
 uob.6.a:0 "Shocking, to say the least"
 uob.7.t:0 "Chairman Election - Maximists Secure a Majority"
 uob.7.d:0 "The TUC has decided to vote for Oswald Mosley's Maximists with an overwhelming majority. Oswald Mosley will become the new Chairman of the TUC."
@@ -426,7 +426,7 @@ uob.63.t:0 "Ireland is isolated!"
 uob.63.d:0 "Now that we have been successful in isolating Ireland diplomatically, we can send them our demands!"
 uob.63.a:0 "Let's see if they accept.."
 uob.64.t:0 "Britain demands annexation!"
-uob.64.d:0 "Our worst fears have been realised, the British government has demanded the reannexation of Ireland. Ireland is to be an oppressed province once again. Although the situation looks hopeless the nation is near universally in favour of fighting until the bitter end, come woe or weal."
+uob.64.d:0 "Our worst fears have been realised, the British government has demanded the re-annexation of Ireland. Ireland is to be an oppressed province once again. Although the situation looks hopeless the nation is near universally in favour of fighting until the bitter end, come woe or weal."
 uob.64.a:0 "We have no choice.."
 uob.64.b:0 "We'll make them pay for every inch they take!"
 uob.65.t:0 "Britain demands a syndicalist government!"
@@ -720,7 +720,7 @@ uob.336.t:0 "British advisers welcomed"
 uob.336.d:0 "Now that our country has a Syndicalist government, the team of British advisers sent to pressure us have changed their seat a few streets. They already have brought forth a few ideas on efficiency."
 uob.336.a:0 "Thanks Britain, I guess...?"
 uob.337.t:0 "A British invitation"
-uob.337.d:0 "The Union of Britain has formally invited our government to send deputies to the next Congress of the Third International. This would include us in the world-wide alliance of Syndicalist countries and bring us out from our seat in the backrow..."
+uob.337.d:0 "The Union of Britain has formally invited our government to send deputies to the next Congress of the Third International. This would include us in the world-wide alliance of Syndicalist countries and bring us out from our seat in the back row..."
 uob.337.a:0 "Workers of the World, unite!"
 uob.337.a:0 "No, we're quite fine alone."
 uob.338.t:0 "The Silence after the Storm"
@@ -858,14 +858,14 @@ uobflavour.19.a:0 "We must spread the Light of knowledge to the entire world!"
 uobflavour.19.b:0 "It's all Syndicalist propaganda anyway."
 uobflavour.21.t:0 "A new General Secretary"
 uobflavour.21.d:0 "After the recent death of our General Secretary it will be necessary to appoint a new one."
-uobflavour.21.aa:0 "G.D.H. Cole will continue Blair's behind the scenes work"
-uobflavour.21.ab:0 "Phil Piratin! It is time for a more liberal Maximist voice"
-uobflavour.21.ac:0 "Nye Bevan will build a worker's paradise in Blair's honour"
-uobflavour.21.ad:0 "Harry Pollitt will keep the Unions happy"
-uobflavour.21.ae:0 "Barbara Castle will continue the behind the scenes work"
-#uobflavour.21.af:0 "Denis Healey will get the most out of Britain"
-#uobflavour.21.ag:0 "Tony Benn, up and coming son of William, gets his chance"
-uobflavour.21.ah:0 "Eleanor Rathbone! It's time for more women in the top jobs"
+uobflavour.21.a:0 "G.D.H. Cole will continue Blair's behind the scenes work"
+uobflavour.21.b:0 "Phil Piratin! It is time for a more liberal Maximist voice"
+uobflavour.21.c:0 "Nye Bevan will build a worker's paradise in Blair's honour"
+uobflavour.21.d:0 "Harry Pollitt will keep the Unions happy"
+uobflavour.21.e:0 "Barbara Castle will continue the behind the scenes work"
+#uobflavour.21.f:0 "Denis Healey will get the most out of Britain"
+#uobflavour.21.g:0 "Tony Benn, up and coming son of William, gets his chance"
+uobflavour.21.h:0 "Eleanor Rathbone! It's time for more women in the top jobs"
 uobflavour.22.t:0 "General Secretary Maxton passes away"
 uobflavour.22.d:0 "The General Secretary, James Maxton, has died after a lifetime serving the workers of Britain. The Union of Britain mourns this immeasurable loss."
 uobflavour.22.a:0 "Memento mori."
